--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "normalize.css": "^8.0.1",
     "sass": "^1.69.5",
     "swiper": "^11.0.3",
-    "vite": "^4.4.5",
-    "vite-plugin-image-optimizer": "^1.1.7"
+    "vite": "^4.4.5"
   }
 }
